--- a/AngularTest-Backend/AngularTest-Backend/AngularTest-Backend.csproj
+++ b/AngularTest-Backend/AngularTest-Backend/AngularTest-Backend.csproj
@@ -5,6 +5,13 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>AngularTest_Backend</RootNamespace>
+    <UserSecretsId>d66b42d5-b821-4e1e-940a-9f8e40962f9b</UserSecretsId>
+    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
+  </ItemGroup>
 
 </Project>
