--- a/AngularTest-Backend/docker-compose.override.yml
+++ b/AngularTest-Backend/docker-compose.override.yml
@@ -4,10 +4,11 @@ services:
   angulartest-backend:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=https://+:443;http://+:80
+      - ASPNETCORE_URLS=//+:80 
+      #https://+:443;http:
     ports:
       - "80"
-      - "443"
+      #- "443"z
     #volumes:
     #  - ${APPDATA}/Microsoft/UserSecrets:C:\Users\ContainerUser\AppData\Roaming\Microsoft\UserSecrets:ro
     #  - ${APPDATA}/ASP.NET/Https:C:\Users\ContainerUser\AppData\Roaming\ASP.NET\Https:ro
