--- a/AngularTest-Backend/docker-compose.yml
+++ b/AngularTest-Backend/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
   angulartest-backend:
-    image: beela/angular-csharp-test-backend:latest
+    image: ${DOCKER_REGISTRY-}angulartestbackend
     build:
       context: .
       dockerfile: AngularTest-Backend\Dockerfile
